# src/main/java/com/sprint/mission/discodeit/dto/request/userstatus/UserStatusUpdateRequest.java
@@ -1,12 +1,13 @@
 package com.sprint.mission.discodeit.dto.request.userstatus;
 
 import com.sprint.mission.discodeit.domain.enums.UserStatusType;
-import jakarta.validation.constraints.NotNull;
+import java.time.Instant;
 
 public record UserStatusUpdateRequest(
 
-    @NotNull
-    UserStatusType userStatusType
+    UserStatusType newUserStatusType,
+
+    Instant newLastActiveAt
 ) {
 
 }
